[gd_scene load_steps=4 format=2]

[ext_resource path="res://rr1.png" type="Texture" id=1]
[ext_resource path="res://Node2D.gd" type="Script" id=2]
[ext_resource path="res://RRBase1.mp3" type="AudioStream" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Rr1" type="Sprite" parent="."]
position = Vector2( 1055, 584 )
scale = Vector2( 0.134048, 0.126842 )
texture = ExtResource( 1 )

[node name="RunButton" type="Button" parent="."]
margin_left = 52.0
margin_top = 17.0
margin_right = 88.0
margin_bottom = 37.0
rect_scale = Vector2( 2, 2 )
text = "Run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StopButton" type="Button" parent="."]
margin_left = 344.0
margin_top = 18.0
margin_right = 384.0
margin_bottom = 38.0
rect_scale = Vector2( 2, 2 )
text = "Stop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RRAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="RunButton" to="." method="_on_RunButton_pressed"]
[connection signal="pressed" from="StopButton" to="." method="_on_StopButton_pressed"]
