[gd_scene load_steps=6 format=2]

[ext_resource path="res://Drone03.png" type="Texture" id=1]
[ext_resource path="res://Drone01.jpg" type="Texture" id=2]
[ext_resource path="res://Drone02.png" type="Texture" id=3]
[ext_resource path="res://Drone04.jpg" type="Texture" id=4]
[ext_resource path="res://Node2D.gd" type="Script" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="SpriteDrone1" type="Sprite" parent="."]
position = Vector2( 114, 97 )
scale = Vector2( 0.196215, 0.212781 )
texture = ExtResource( 2 )

[node name="SpriteDrone2" type="Sprite" parent="."]
position = Vector2( 115, 192 )
texture = ExtResource( 3 )

[node name="SpriteDrone3" type="Sprite" parent="."]
position = Vector2( 123, 289 )
scale = Vector2( 0.206967, 0.272305 )
texture = ExtResource( 1 )

[node name="SpriteDrone4" type="Sprite" parent="."]
position = Vector2( 122, 389 )
scale = Vector2( 0.196712, 0.253521 )
texture = ExtResource( 4 )

[node name="Button" type="Button" parent="."]
margin_left = 65.0
margin_top = 15.0
margin_right = 207.0
margin_bottom = 43.0
text = "Muda Velocidade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonGanhador" type="Button" parent="."]
margin_left = 87.0
margin_top = 447.0
margin_right = 160.0
margin_bottom = 467.0
text = "Ganhador"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelGanhador" type="Label" parent="."]
margin_left = 196.0
margin_top = 446.0
margin_right = 354.0
margin_bottom = 467.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ButtonGanhador" to="." method="_on_ButtonGanhador_pressed"]
